--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
         <div class="chaplain">
           <h4 class="text-center">Chaplain's Welcome Address</h4>
           <div class="row">
-            <div class="chaplain-left col-lg-4 col-md-6 col-sm-12 p-5">
+            <div class="chaplain-left text-center col-lg-4 col-md-6 col-sm-12 p-5">
               <img src="image/download (1).jpg" alt="">
               <p class="p-5">Rev. Fr. Nnnamdi</p>
             </div>
 
-            <div class="chaplain-right text-left col-lg-8 col-md-6 col-sm-12 p-5">
+            <div class="chaplain-right col-lg-8 col-md-6 col-sm-12 p-5">
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore provident, ad ea in eius odit recusandae architecto saepe officiis debitis obcaecati ullam vel nihil facilis at voluptas beatae libero nesciunt fugit ab pariatur. Tempore labore nemo nam quo nihil dolor deleniti praesentium neque distinctio iste unde error est sit sequi, repellendus nobis pariatur veritatis quam architecto autem velit odio consectetur aspernatur tenetur. Dolorem nemo similique ducimus? Quas necessitatibus aliquid sint fuga aspernatur dolorum rem hic repellendus sapiente, alias natus reiciendis molestiae. Nesciunt recusandae debitis nulla tempora, sed perspiciatis voluptatum doloremque temporibus quisquam. Voluptates explicabo vel esse harum inventore quas facilis, delectus corporis ea consequatur ipsam nihil ipsum nobis nostrum cupiditate nesciunt quibusdam corrupti sequi natus! Id laudantium tempora excepturi ducimus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas facilis numquam laboriosam magnam vel provident id cumque dolor maxime aspernatur? Ratione amet nobis natus praesentium accusantium? Ab accusantium cupiditate ipsum, iusto inventore voluptatum similique odio! Odio nam praesentium iusto omnis.</p>
             </div>
           </div>
-        </div>
-        <hr>
+       
+          <hr>
 
         <div class="Religious gallery text-center p-2">
 
@@ -315,6 +315,8 @@
           </div>
         </div>
 
+        </div>
+
 
 
 
@@ -323,8 +325,8 @@
 
 
   
-    <div class="container-fluid programme article-4 p-5 text-center bg-warning">
-      <h2 class="mb-5">Our Programme For Year 2020</h2>
+    <div class="container programme article-4 p-5 text-center bg-warning">
+      <h2 class="p-2">Our Programme For Year 2020</h2>
 
       <div class="text-center">
         <table class="table table-hover p-5">
@@ -373,12 +375,12 @@
 
 
 
-    <div class="container-fluid article-2 p-5 text-center bg-warning">
+    <div class="container-fluid article-2 p-5 text-center bg-transparent">
       <div class="gallery-header">
         <h2>Gallery</h2>
       </div>
 
-        <div class="gallery">
+        <div class="gallery bg-warning">
 
             <div class="gallery-img">
                 <img src="image/download (1).jpg" alt="">
