--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@
 
     <footer>
 
-      <div class="containner-fluid">
+      <div class="containner-fluid bg-warning">
+        <p>Designed by CodeAddict</p>
+
 
       </div>
 
